Add jdk16+ caveats