@@ -15,7 +15,7 @@
 
 For working with this project, [IntelliJ IDEA](https://www.jetbrains.com/idea/download) is our recommended IDE and the one used by most collaborators. The free community edition has everything you'll need to start testing and contributing real improvements to the project.
 
-You can build RuneLite locally using [JDK 11](https://adoptopenjdk.net) through JDK 15. Note the codebase supports language features up to Java 8.
+You can build RuneLite locally using [JDK 11](https://adoptium.net/) through JDK 15, JDK 16+ requires additional command line arguments in order to function properly, see the bottom of the page for further instructions. Note the codebase supports language features up to Java 8.
 
 ## Importing the project
 
@@ -134,3 +134,17 @@ Typically your arguments will look like `clean install -DskipTests -U`
 If you are unsure, run: *Maven Projects* > *Reimport all maven projects* in IntelliJ (or *Ctrl* + *Shift* + *A* and type *Reimport all maven project*).
 
 Happy development!
+
+#### JDKs 16+
+
+You have to add the following extra VM arguments in order to use these java versions:
+
+##### Windows/Linux
+```
+--add-opens=java.desktop/sun.awt=ALL-UNNAMED
+```
+
+##### Mac
+```
+--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED --add-opens=java.desktop/sun.awt=ALL-UNNAMED
+```
